# hermes-x402

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: hermes-plugin-smoke.json
docs/: circle-cli-backend.md
docs/superpowers/plans/: 2026-07-16-circle-cli-buyer-backend.md
examples/: buyer_example.py  dual_role_example.py  seller_example.py
hermes_x402/: __init__.py  agent.py  buyer.py  circle_cli_installer.py  config.py  context.py  dns_validator.py  env_writer.py  install.py  live_test.py  middleware.py  network_policy.py  networks.py  readiness.py  seller_gateway.py
hermes_x402/backends/: __init__.py  circle_cli.py  circle_dcw.py
hermes_x402/buyer/: __init__.py  approval.py  backend.py  challenge.py  errors.py  models.py  options.py  policy.py  service.py  supports.py
hermes_x402/circle_cli/: __init__.py  client.py  errors.py  models.py  runner.py
hermes_x402/discovery/: __init__.py  circle_marketplace.py  provider.py
hermes_x402/hermes_plugin/: __init__.py  entry.py  errors.py  formatters.py  gateway_state.py  output.py  runtime.py  schemas.py  slash_command.py  tools.py
tests/: conftest.py  test_approval.py  test_arc_network_regression.py  test_circle_cli.py  test_circle_cli_installer.py  test_config_v2.py  test_dependency_constraints.py  test_discovery.py  test_dns_validator.py  test_env_writer.py  test_handler_protocol.py  test_hardening.py  test_hermes_plugin.py  test_hermes_x402.py  test_live_test_ctx.py  test_network_policy.py  test_networks.py  test_options.py  test_p0_regression.py  test_pr5.py  test_real_hermes_router.py  test_regression_blockers.py  test_seller_gateway.py  test_slash_command.py  test_supports.py
