[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-x402"
version = "0.2.0"
description = "Circle x402 nanopayment integration for Hermes Agent — seller middleware (aiohttp) + buyer tool (DCW) + dual-role agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Riyan", email = "riyannode@users.noreply.github.com" },
]
keywords = ["hermes", "x402", "circle", "gateway", "nanopayments", "dcw", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dcw = [
    "cryptography>=42.0",
]
all = [
    "cryptography>=42.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "cryptography>=42.0",
]

[project.entry-points."hermes_agent.plugins"]
hermes-x402 = "hermes_x402.hermes_plugin.entry"

[project.urls]
Homepage = "https://github.com/riyannode/hermes-x402"
Repository = "https://github.com/riyannode/hermes-x402"
Issues = "https://github.com/riyannode/hermes-x402/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing seller/context compatibility annotations and wire-format documentation.
"hermes_x402/context.py" = ["UP045"]
"hermes_x402/middleware.py" = ["E501", "UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
exclude = [
    ".env",
    ".env.*",
    "*.env",
    "SOUL.md",
    "artifacts/",
    "docs/superpowers/plans/",
    ".pytest_cache/",
    ".ruff_cache/",
    "__pycache__/",
]
